# pytest-test-radar

./: LICENSE  README.md  Taskfile.yml  pyproject.toml
src/pytest_test_radar/: plugin.py
tests/it/: test_plugin.py
